@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.apache.cxf</groupId>
         <artifactId>cxf</artifactId>
-        <version>3.4.1-SNAPSHOT</version>
+        <version>3.4.4-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>cxf-parent</artifactId>
@@ -54,8 +54,8 @@
         <!-- stuff related to ASM -->
         <cxf.asm.groupId>org.ow2.asm</cxf.asm.groupId>
         <cxf.asm.artifactId>asm</cxf.asm.artifactId>
-        <cxf.asm.version>8.0.1</cxf.asm.version>
-        <cxf.osgi.asm.version>[3.0,9)</cxf.osgi.asm.version>
+        <cxf.asm.version>9.1</cxf.asm.version>
+        <cxf.osgi.asm.version>[3.0,10)</cxf.osgi.asm.version>
         <cxf.easymock.version>4.2</cxf.easymock.version>
         <!-- OSGi related properties -->
         <cxf.fragment.host />
@@ -77,18 +77,18 @@
         <!-- please maintain alphabetical order here -->
         <cxf.abdera.osgi.version>1.1.3_2</cxf.abdera.osgi.version>
         <cxf.abdera.version>1.1.3</cxf.abdera.version>
-        <cxf.activemq.version>5.16.0</cxf.activemq.version>
-        <cxf.ahc.version>2.12.1</cxf.ahc.version>
+        <cxf.activemq.version>5.16.1</cxf.activemq.version>
+        <cxf.ahc.version>2.12.2</cxf.ahc.version>
         <cxf.apacheds.version>2.0.0.AM26</cxf.apacheds.version>
         <cxf.arquillian.version>1.1.14.Final</cxf.arquillian.version>
         <cxf.arquillian.weld.container.version>2.0.1.Final</cxf.arquillian.weld.container.version>
         <cxf.aspectj.version>1.9.1</cxf.aspectj.version>
         <cxf.atmosphere.version.range>[2.4,3.0)</cxf.atmosphere.version.range>
         <cxf.atmosphere.version>2.6.1</cxf.atmosphere.version>
-        <cxf.bcprov.version>1.66</cxf.bcprov.version>
-        <cxf.brave.reporter.version>2.15.2</cxf.brave.reporter.version>
-        <cxf.brave.version>5.12.6</cxf.brave.version>
-        <cxf.brave.zipkin.version>2.21.7</cxf.brave.zipkin.version>
+        <cxf.bcprov.version>1.68</cxf.bcprov.version>
+        <cxf.brave.reporter.version>2.16.2</cxf.brave.reporter.version>
+        <cxf.brave.version>5.13.2</cxf.brave.version>
+        <cxf.brave.zipkin.version>2.23.0</cxf.brave.zipkin.version>
         <cxf.cda.api.osgi.range>[1.1,2)</cxf.cda.api.osgi.range>
         <cxf.cdi.api.version>2.0.2</cxf.cdi.api.version>
         <cxf.classgraph.version>4.8.25</cxf.classgraph.version>
@@ -103,7 +103,7 @@
         <cxf.derby.version>10.14.2.0</cxf.derby.version>
         <cxf.dom4j.version>2.1.3</cxf.dom4j.version>
         <cxf.dropwizard3.version>3.2.6</cxf.dropwizard3.version>
-        <cxf.dropwizard4.version>4.1.14</cxf.dropwizard4.version>
+        <cxf.dropwizard4.version>4.1.18</cxf.dropwizard4.version>
         <cxf.ehcache3.version>3.8.1</cxf.ehcache3.version>
         <cxf.el-api.version>3.0.3</cxf.el-api.version>
         <cxf.findbugs.version>3.0.2</cxf.findbugs.version>
@@ -116,21 +116,21 @@
         <cxf.geronimo.transaction.version>3.1.4</cxf.geronimo.transaction.version>
         <cxf.geronimo.openapi.version>1.0.12</cxf.geronimo.openapi.version>
         <cxf.glassfish.json.version>1.1.4</cxf.glassfish.json.version>
-        <cxf.guava.version>29.0-jre</cxf.guava.version>
+        <cxf.guava.version>30.1-jre</cxf.guava.version>
         <cxf.hamcrest.version>2.2</cxf.hamcrest.version>
         <cxf.hazelcast.version>3.12.9</cxf.hazelcast.version>
-        <cxf.hibernate.em.version>5.4.19.Final</cxf.hibernate.em.version>
-        <cxf.hibernate.validator.version>6.1.4.Final</cxf.hibernate.validator.version>
-        <cxf.hsqldb.version>2.5.1</cxf.hsqldb.version>
+        <cxf.hibernate.em.version>5.4.27.Final</cxf.hibernate.em.version>
+        <cxf.hibernate.validator.version>6.1.7.Final</cxf.hibernate.validator.version>
+        <cxf.hsqldb.version>2.5.0</cxf.hsqldb.version>
         <cxf.httpcomponents.asyncclient.version.range>[4.0,4.2)</cxf.httpcomponents.asyncclient.version.range>
         <cxf.httpcomponents.asyncclient.version>4.1.4</cxf.httpcomponents.asyncclient.version>
         <cxf.httpcomponents.client.version>4.5.13</cxf.httpcomponents.client.version>
         <cxf.httpcomponents.core.version.range>[4.3,4.5.0)</cxf.httpcomponents.core.version.range>
-        <cxf.httpcomponents.core.version>4.4.13</cxf.httpcomponents.core.version>
-        <cxf.jackson.version>2.11.3</cxf.jackson.version>
-        <cxf.jackson.databind.version>2.11.3</cxf.jackson.databind.version>
+        <cxf.httpcomponents.core.version>4.4.14</cxf.httpcomponents.core.version>
+        <cxf.jackson.version>2.11.4</cxf.jackson.version>
+        <cxf.jackson.databind.version>2.11.4</cxf.jackson.databind.version>
         <cxf.jacorb.version>3.9</cxf.jacorb.version>
-        <cxf.jaeger.version>1.4.0</cxf.jaeger.version>
+        <cxf.jaeger.version>1.5.0</cxf.jaeger.version>
         <cxf.jakarta.activation.version>1.2.2</cxf.jakarta.activation.version>
         <cxf.jakarta.soapapi.version>1.4.2</cxf.jakarta.soapapi.version>
         <cxf.jakarta.jwsapi.version>2.1.0</cxf.jakarta.jwsapi.version>
@@ -148,30 +148,30 @@
         <cxf.jdom.version>1.0</cxf.jdom.version>
         <cxf.jettison.version>1.4.1</cxf.jettison.version>
         <cxf.jetty.osgi.version>[9.2,10)</cxf.jetty.osgi.version>
+        <cxf.jetty9.version>9.4.38.v20210224</cxf.jetty9.version>
         <cxf.jetty.version>${cxf.jetty9.version}</cxf.jetty.version>
-        <cxf.jetty9.version>9.4.32.v20200930</cxf.jetty9.version>
         <cxf.jexl.version>3.1</cxf.jexl.version>
         <cxf.joda.time.version>2.9.4</cxf.joda.time.version>
-        <cxf.johnzon.version>1.2.8</cxf.johnzon.version>
+        <cxf.johnzon.version>1.2.10</cxf.johnzon.version>
         <cxf.json.api.version>1.1.6</cxf.json.api.version>
         <cxf.json.bind-api.version>1.0.2</cxf.json.bind-api.version>
         <cxf.jsr250.api.version>1.0</cxf.jsr250.api.version>
-        <cxf.junit.version>4.13.1</cxf.junit.version>
+        <cxf.junit.version>4.13.2</cxf.junit.version>
         <cxf.kerby.version>2.0.1</cxf.kerby.version>
         <cxf.littleproxy.version>1.1.2</cxf.littleproxy.version>
         <cxf.logback.classic.version>1.2.3</cxf.logback.classic.version>
         <cxf.lucene.version>8.2.0</cxf.lucene.version>
         <cxf.maven.core.version>3.6.3</cxf.maven.core.version>
-        <cxf.micrometer.version>1.5.5</cxf.micrometer.version>
-        <cxf.microprofile.config.version>1.2</cxf.microprofile.config.version>
-        <cxf.microprofile.rest.client.version>2.0-RC2</cxf.microprofile.rest.client.version>
-        <cxf.microprofile.openapi.version>1.1.2</cxf.microprofile.openapi.version>        
+        <cxf.micrometer.version>1.5.12</cxf.micrometer.version>
+        <cxf.microprofile.config.version>2.0</cxf.microprofile.config.version>
+        <cxf.microprofile.rest.client.version>2.0</cxf.microprofile.rest.client.version>
+        <cxf.microprofile.openapi.version>2.0</cxf.microprofile.openapi.version>
         <cxf.mina.version>2.1.3</cxf.mina.version>
-        <cxf.mockito.version>3.4.6</cxf.mockito.version>
+        <cxf.mockito.version>3.8.0</cxf.mockito.version>
         <cxf.msv.version>2013.6.1</cxf.msv.version>
         <cxf.neethi.version>3.1.1</cxf.neethi.version>
         <cxf.netty.version.range>[4,5)</cxf.netty.version.range>
-        <cxf.netty.version>4.1.52.Final</cxf.netty.version>
+        <cxf.netty.version>4.1.60.Final</cxf.netty.version>
         <cxf.oauth.version>20100527</cxf.oauth.version>
         <cxf.olingo.version>2.0.11</cxf.olingo.version>
         <cxf.openjpa.version>3.1.2</cxf.openjpa.version>
@@ -182,11 +182,11 @@
         <cxf.plexus-archiver.version>4.2.0</cxf.plexus-archiver.version>
         <cxf.plexus-utils.version>3.2.0</cxf.plexus-utils.version>
         <cxf.reactivestreams.version>1.0.3</cxf.reactivestreams.version>
-        <cxf.reactor.version>3.3.11.RELEASE</cxf.reactor.version>
+        <cxf.reactor.version>3.3.15.RELEASE</cxf.reactor.version>
         <cxf.rhino.version>1.7R2</cxf.rhino.version>
         <cxf.rxjava.version>1.3.8</cxf.rxjava.version>
-        <cxf.rxjava2.version>2.2.20</cxf.rxjava2.version>
-        <cxf.rxjava3.version>3.0.7</cxf.rxjava3.version>
+        <cxf.rxjava2.version>2.2.21</cxf.rxjava2.version>
+        <cxf.rxjava3.version>3.0.11</cxf.rxjava3.version>
         <cxf.saaj-impl.version>1.5.2</cxf.saaj-impl.version>
         <cxf.servlet-api.artifact>jakarta.servlet-api</cxf.servlet-api.artifact>
         <cxf.servlet-api.group>jakarta.servlet</cxf.servlet-api.group>
@@ -194,36 +194,36 @@
         <cxf.slf4j.version>1.7.30</cxf.slf4j.version>
         <cxf.snakeyaml.version>1.26</cxf.snakeyaml.version>
         <cxf.specs.jaxws.api.version>2.3_2</cxf.specs.jaxws.api.version>
-        <cxf.spring.boot.version>2.3.5.RELEASE</cxf.spring.boot.version>
+        <cxf.spring.boot.version>2.3.9.RELEASE</cxf.spring.boot.version>
         <cxf.spring.ldap.version>2.3.3.RELEASE</cxf.spring.ldap.version>
         <cxf.spring.mock>spring-test</cxf.spring.mock>
         <cxf.spring.osgi.version>1.2.1</cxf.spring.osgi.version>
-        <cxf.spring.security.version>5.3.5.RELEASE</cxf.spring.security.version>
-        <cxf.spring.version>5.2.9.RELEASE</cxf.spring.version>
+        <cxf.spring.security.version>5.3.8.RELEASE</cxf.spring.security.version>
+        <cxf.spring.version>5.2.13.RELEASE</cxf.spring.version>
         <cxf.stax-ex.version>1.8.3</cxf.stax-ex.version>
-        <cxf.swagger.ui.version>3.32.1</cxf.swagger.ui.version>
-        <cxf.swagger.v3.version>2.1.5</cxf.swagger.v3.version>
+        <cxf.swagger.ui.version>3.38.0</cxf.swagger.ui.version>
+        <cxf.swagger.v3.version>2.1.6</cxf.swagger.v3.version>
         <cxf.swagger2.version>1.6.2</cxf.swagger2.version>
         <cxf.swagger2.guava.version>27.0-jre</cxf.swagger2.guava.version>
-        <cxf.tika.version>1.24.1</cxf.tika.version>
-        <cxf.tomcat.version>9.0.39</cxf.tomcat.version>
+        <cxf.tika.version>1.25</cxf.tika.version>
+        <cxf.tomcat.version>9.0.44</cxf.tomcat.version>
         <cxf.tomitribe.http.signature.version>1.3</cxf.tomitribe.http.signature.version>
         <cxf.undertow.osgi.version>[1.4,3.0)</cxf.undertow.osgi.version>
         <cxf.undertow.xnio.osgi.version>[3.3,4.0)</cxf.undertow.xnio.osgi.version>
-        <cxf.undertow.version>2.1.3.Final</cxf.undertow.version>
+        <cxf.undertow.version>2.2.5.Final</cxf.undertow.version>
         <!-- the Export-Package is the same as the Maven artifact
              version (with the Final), but we don't want an import package with a version
              with a qualifier. We do want a range. -->
         <cxf.validation.api.package.version>[1.0.0,3)</cxf.validation.api.package.version>
         <cxf.validation.api.version>2.0.2</cxf.validation.api.version>
-        <cxf.velocity.version>2.2</cxf.velocity.version>
+        <cxf.velocity.version>2.3</cxf.velocity.version>
         <cxf.wiremock.version>2.23.2</cxf.wiremock.version>
-        <cxf.woodstox.core.version>6.2.1</cxf.woodstox.core.version>
+        <cxf.woodstox.core.version>6.2.4</cxf.woodstox.core.version>
         <cxf.woodstox.stax2-api.version>4.2.1</cxf.woodstox.stax2-api.version>
         <cxf.wsdl4j.version>1.6.3</cxf.wsdl4j.version>
-        <cxf.wss4j.version>2.3.0</cxf.wss4j.version>
+        <cxf.wss4j.version>2.3.1</cxf.wss4j.version>
         <cxf.xalan.version>2.7.2</cxf.xalan.version>
-        <cxf.xerces.version>2.12.0</cxf.xerces.version>
+        <cxf.xerces.version>2.12.1</cxf.xerces.version>
         <cxf.xmlschema.version>2.2.5</cxf.xmlschema.version>
         <cxf.zest.version>2.1</cxf.zest.version>
 
@@ -265,7 +265,7 @@
         <cxf.xalan.bundle.version>2.7.2_3</cxf.xalan.bundle.version>
         <cxf.xerces.bundle.version>2.12.0_1</cxf.xerces.bundle.version>
         <cxf.xmlresolver.bundle.version>1.2_5</cxf.xmlresolver.bundle.version>
-        <cxf.xmlsec.bundle.version>2.2.0</cxf.xmlsec.bundle.version>
+        <cxf.xmlsec.bundle.version>2.2.1</cxf.xmlsec.bundle.version>
         <cxf.xpp3.bundle.version>1.1.4c_6</cxf.xpp3.bundle.version>
     </properties>
     <build>
@@ -2373,6 +2373,17 @@
                     </plugin>
                 </plugins>
             </build>
+        </profile>
+        <profile>
+            <id>jdk16</id>
+            <activation>
+                <jdk>[16,)</jdk>
+            </activation>
+            <properties>
+                <!-- EasyMock stills uses JDK Internal APIs: see please https://bugs.openjdk.java.net/browse/JDK-8255363 -->
+                <!-- JAXB: see please https://github.com/javaee/jaxb-v2/issues/1184 -->
+                <cxf.surefire.fork.vmargs>-ea --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.xml/javax.xml.namespace=ALL-UNNAMED</cxf.surefire.fork.vmargs>
+            </properties>
         </profile>
     </profiles>
 </project>
